[package]
name = "amethyst"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.19.6", features = ["std", "lexer"] }
cranelift = "0.87.0"
cranelift-module = "0.87.0"
cranelift-object = "0.87.0"
regex = "1"
target-lexicon = "0.12.3"
#petgraph = "0.6.0"

[build-dependencies]
lalrpop = "0.19.6"
