[package]
name = "amethyst-lib"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = ["std"]
std = ["lalrpop-util/std"]

[dependencies]
no-std-compat = { version = "0.4.1", features = ["alloc"] }
hashbrown = "0.12.0"
lalrpop-util = { version = "0.19.6", features = ["std", "lexer"] }
regex = "1"

[build-dependencies]
lalrpop = "0.19.6"
